--- a/popup.html
+++ b/popup.html
@@ -143,7 +143,7 @@
 <body>
     <h1><span>⚡</span> Anime4K Web</h1>
 
-    <div class="status">
+    <div class="status" id="status-container" style="cursor:pointer" title="Click to Toggle">
         <span>Status: <span id="status-text" style="color:#4ade80">Active</span></span>
         <div class="status-dot" id="status-dot"></div>
     </div>
@@ -208,7 +208,7 @@
         <span>Show Info Badges</span>
     </label>
 
-    <button id="apply" class="btn btn-primary">Apply Settings</button>
+    <!-- Apply button removed for instant settings -->
     <div style="font-size:10px;color:#666;text-align:center;margin-top:12px;">Shortcut: <b>Alt+U</b> to Toggle</div>
 
     <script src="popup.js"></script>
