--- a/popup.html
+++ b/popup.html
@@ -114,6 +114,21 @@
             transform: translateY(1px);
         }
 
+        .stepper {
+            background: #222;
+            color: #fff;
+            border: 1px solid #444;
+            width: 36px;
+            height: 36px;
+            border-radius: 8px;
+            font-size: 18px;
+            display:inline-flex;
+            align-items:center;
+            justify-content:center;
+            cursor:pointer;
+        }
+        .stepper:active { transform: translateY(1px); }
+
         .status {
             font-size: 12px;
             margin-bottom: 16px;
@@ -200,6 +215,24 @@
     </label>
 
     <hr>
+
+    <h3 style="margin:8px 0;color:#4ade80;font-size:13px">Performance / Quality</h3>
+
+    <label>Quality Preset</label>
+    <select id="quality-preset">
+        <option value="auto">Auto (recommended)</option>
+        <option value="high">High</option>
+        <option value="medium">Medium</option>
+        <option value="low">Low</option>
+    </select>
+
+    <label style="margin-top:8px">Max Instances (concurrent upscalers)</label>
+    <div style="display:flex;gap:8px;align-items:center;">
+        <button id="max-dec" class="stepper" aria-label="Decrease">−</button>
+        <input type="number" id="max-instances" min="1" max="32" value="3" style="flex:1;padding:8px;background:#222;border:1px solid #444;border-radius:8px;color:#fff;">
+        <button id="max-inc" class="stepper" aria-label="Increase">+</button>
+    </div>
+
 
     <label class="checkbox-row">
         <input type="checkbox" id="compare">
