--- a/popup.html
+++ b/popup.html
@@ -129,6 +129,17 @@
         }
         .stepper:active { transform: translateY(1px); }
 
+        .validation-msg {
+            font-size: 10px;
+            color: #f87171;
+            margin-top: 4px;
+            display: none;
+            font-weight: 500;
+        }
+        .validation-msg.show {
+            display: block;
+        }
+
         .status {
             font-size: 12px;
             margin-bottom: 16px;
@@ -156,7 +167,7 @@
 </head>
 
 <body>
-    <h1><span>⚡</span> Anime4K Web</h1>
+    <h1><span>✨</span> Anime4K Web</h1>
 
     <div class="status" id="status-container" style="cursor:pointer" title="Click to Toggle">
         <span>Status: <span id="status-text" style="color:#4ade80">Active</span></span>
@@ -232,6 +243,7 @@
         <input type="number" id="max-instances" min="1" max="32" value="3" style="flex:1;padding:8px;background:#222;border:1px solid #444;border-radius:8px;color:#fff;">
         <button id="max-inc" class="stepper" aria-label="Increase">+</button>
     </div>
+    <div id="max-validation" class="validation-msg"></div>
 
 
     <label class="checkbox-row">
