--- a/popup.html
+++ b/popup.html
@@ -178,6 +178,8 @@
     <select id="model">
         <option value="anime4k_v41_hq">Anime4K HQ (Recommended)</option>
         <option value="anime4k_v41_fast">Anime4K Fast</option>
+        <option value="lanczos3">Lanczos3 (Quality)</option>
+        <option value="esrgan">ESRGAN (Neural)</option>
         <option value="fsr">FSR 1.0 (Crisp)</option>
         <option value="realsr">Real-ESRGAN Lite (Detail)</option>
         <option value="xbrz">xBRZ (Pixel Art)</option>
