--- a/popup.html
+++ b/popup.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
     <style>
         body {
             width: 300px;
@@ -171,7 +172,7 @@
 </head>
 
 <body>
-    <h1><span>✨</span> Anime4K Web</h1>
+    <h1><span>✨</span> NextClarity</h1>
 
     <div class="status" id="status-container" style="cursor:pointer" title="Click to Toggle">
         <span>Status: <span id="status-text" style="color:#4ade80">Active</span></span>
@@ -277,6 +278,7 @@
     <div style="font-size:10px;color:#666;text-align:center;margin-top:12px;">Shortcut: <b>Alt+U</b> to Toggle</div>
 
     <script src="src/config.js"></script>
+    <script src="src/utils/logger.js"></script>
     <script src="src/popup-main.js"></script>
 </body>
 
